# memset-pattern

./: Cargo.toml  README.md
benches/: bench.rs
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: fuzz.rs
src/: lib.rs
